Changed names and description of the site

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
         %p
           &copy; 2013 - 2014 Philippine Ruby Users Group
           %br
-          = link_to "Fork this on Github", "https://github.com/phrug/pinoyrb"
+          = link_to "Fork this on Github", "https://github.com/banta/nairuby.rb"
 
     = javascript_include_tag "//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry"
     = javascript_include_tag "//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"
