--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -2,10 +2,14 @@
 .jumbotron
   .pull-right.ruby-logo
     = render :partial => "ruby_logo"
-  %h1 Philippine Ruby Users Group
+  %h1 Nairuby Ruby Users Group
   %p 
-    %em (aka PhRUG, PinoyRb, Ruby-Philippines)
-  %p We're a bunch of professionals and hobbyists who share a passion in programming with Ruby.
+  %p
+    Welcome to Nairuby, a user group for
+    = link_to "Ruby", "https://www.ruby-lang.org/"
+    programmers based in
+    = link_to "Nairobi, Kenya.", "http://goo.gl/AMspr8"
+    We welcome all programmers of all levels, from beginner to advanced!
 
 .row.front-columns
 
@@ -29,7 +33,7 @@
           %span.fa.fa-facebook
           Facebook Group
       %li 
-        = link_to "https://groups.google.com/forum/#!forum/ruby-phil" do
+        = link_to "https://groups.google.com/forum/#!forum/nairuby" do
           %span.fa.fa-envelope
           Google Group
       
