--- a/app/views/pages/learn.html.haml
+++ b/app/views/pages/learn.html.haml
@@ -1,55 +1,3 @@
 - build_meta_tags title: "Learn"
 
-%h1 Resources
-
-%h2 Ruby Programming Language
-
-%ul
-  %li 
-    = link_to "Ruby Programming Language", "http://www.ruby-lang.org/"
-    \- official site
-  %li
-    = link_to "RubyInstaller", "http://rubyinstaller.org/"
-    \- installer for Windows
-  %li
-    = link_to "Code School - TryRuby", "http://tryruby.org/"
-    \- online interactive tutorial
-  %li
-    = link_to "RubyMonk", "http://rubymonk.com/"
-    \- a better, more challenging online interactive tutorial
-  %li
-    = link_to "Learn To Program", "http://pine.fm/LearnToProgram/"
-    \- Ruby-based programming tutorial for absolute beginners i.e. non-programmers
-  %li
-    = link_to "Learn Ruby the Hard Way", "http://ruby.learncodethehardway.org/"
-    \- (in beta) Ruby tutorial that focuses on building a solid foundation on Ruby concepts
-  %li
-    = link_to "Ruby Toolbox", "http://ruby-toolbox.com/"
-    \- list of popular RubyGems classified according to use
-
-%h2 Ruby on Rails
-
-%p
-  %strong Note: 
-  %br
-  Ruby on Rails is a web framework geared towards intermediate-level web application developers. 
-  %br
-  If you're an absolute beginner to programming and web development, it's best that you follow the <a href="http://techiferous.com/2010/07/roadmap-for-learning-rails/">Roadmap for Learning Rails</a>.
-
-%ul
-  %li
-    = link_to "Ruby on Rails", "http://rubyonrails.org/"
-    \- official site
-  %li
-    = link_to "RailsInstaller", "http://railsinstaller.org/"
-    \- one-click installer for Windows and OS X
-  %li
-    = link_to "API Dock", "http://apidock.com/"
-    \- searchable API reference, includes both Ruby and Rails
-  %li
-    = link_to "Ruby on Rails Tutorial", "http://ruby.railstutorial.org/"
-    \- a free online tutorial
-  %li
-    = link_to "RailsCasts", "http://railscasts.com/"
-    \- mostly free screencasts on Ruby and Rails topics
-
+%iframe{ id: "iframe", width: "1000", height: "1500", src: "http://nairuby.org/learn/", frameborder:"0", allowfullscreen: "allowfullscreen" }
