--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -35,6 +35,7 @@
       line-height: 1.5;
     }
     ul.community-links {
+      text-align: left;
       list-style-type: none;
       margin: 0;
       padding: 0;
