Changed copies of text

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,7 +43,7 @@
     %footer
       .container
         %p
-          &copy; 2013 - 2014 Philippine Ruby Users Group
+          &copy; 2011 - 2014 Nairobi Ruby Users Group
           %br
           = link_to "Fork this on Github", "https://github.com/banta/nairuby.rb"
 
