--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -29,16 +29,15 @@
           Meetup.com
         (sign-up to receive notifications)
       %li
-        = link_to "irc://irc.freenode.net/phrug" do
-          %span.fa.fa-comments
-          IRC
-        (Freenode #phrug)
-      %li
-        = link_to "http://www.facebook.com/groups/phrug/" do
+        = link_to "http://www.facebook.com/groups/phrug/", target: '_blank' do
           %span.fa.fa-facebook
           Facebook Group
+      %li
+        = link_to "https://twitter.com/NairubyKE", target: '_blank' do
+          %span.fa.fa-twitter
+          Twitter
       %li 
-        = link_to "https://groups.google.com/forum/#!forum/nairuby" do
+        = link_to "https://groups.google.com/forum/#!forum/nairuby", target: '_blank' do
           %span.fa.fa-envelope
           Google Group
       
