Use google groups for signing in users

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -24,9 +24,9 @@
       Want to know who uses Ruby in the Philippines? Connect with the community via:
     %ul.community-links
       %li
-        = link_to "http://www.meetup.com/ruby-phil/" do
+        = link_to "https://groups.google.com/forum/#!forum/nairuby", target: '_blank' do
           %span.fa.fa-users
-          Meetup.com
+          Google Group
         (sign-up to receive notifications)
       %li
         = link_to "http://www.facebook.com/groups/phrug/", target: '_blank' do
